# AdventOfCode

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.py
scripts/: scaffold.py
src/challenges/: conftest.py  constants.py
src/challenges/2025/day01/: __init__.py  solution.py  test_solution.py
src/challenges/2025/day02/: solution.py  test_solution.py
src/challenges/2025/day03/: solution.py  test_solution.py
src/challenges/2025/day04/: solution.py  test_solution.py
src/challenges/2025/day05/: solution.py  test_solution.py
src/challenges/2025/day06/: __init__.py  solution.py  test_solution.py
src/challenges/2025/day07/: solution.py  test_solution.py
src/challenges/2025/day09/: example.txt  input.txt  solution.py  test_solution.py
src/utils/: __init__.py  io.py  utils.py
