[project]
name = "adventofcode"
version = "0.2.0"
description = "Advent of Code solutions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
authors = [{name = "JRStrikwerda"}]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "PERF",   # perflint (performance)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pylint.main]
init-hook = "import sys; sys.path.append('src')"

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "too-many-positional-arguments",
    "too-many-arguments",
    "redefined-outer-name",
    "too-many-function-args",
    "duplicate-code", # pylint is too sensitive and got it wrong more often than not
    "logging-fstring-interpolation", # Let's keep fstrings for consistency
    "method-cache-max-size-none", # I want to be able to use @cache
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-continue", # if ... continue else something should be accepted
    "no-else-raise", # if ... raise else something should be accepted
    "no-else-return", # if ... return else return should be accepted.
    "too-many-instance-attributes",  # Not relevant for dataclasses.
    "unsubscriptable-object", # https://github.com/PyCQA/pylint/issues/3637
    "too-few-public-methods", # Some classes can have no methods,
    "too-many-locals", # just annoying
    "wrong-import-order",  # ruff takes care of this
    "W0511",  # i do want fixme comments
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
    "pre-commit>=4.0.0",
]
